# pulverage

./: .gitignore  Makefile  README.md  pylintrc  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: static-analysis.yaml
pulverage/: coverage_parser.py  diff_parser.py  main.py
tests/: test_main.py  test_main_multiple_files_single_hunk_changes.py  test_main_single_file_continuous_change.py  test_main_single_file_two_hunks_changes.py  test_main_single_file_uncontinuous_change.py
tests/resources/multiple_files_single_hunk_changes/: changes.diff  coverage.xml
tests/resources/single_file_continuous_change/: changes.diff  coverage.xml
tests/resources/single_file_two_hunks_changes/: changes.diff  coverage.xml
tests/resources/single_file_uncontinuous_change/: changes.diff  coverage.xml
