[tool.poetry]
name = "pulverage"
version = "0.1.0"
description = ""
authors = ["canaparro <marcelocanaparro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.3.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
