[tool.poetry]
name = "pulverage"
version = "0.1.0"
description = ""
authors = ["canaparro <marcelocanaparro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.3.0"
pytest = "^8.3.2"
black = "^24.8.0"
mypy = "^1.11.1"
autoflake = "^2.3.1"
isort = "^5.13.2"
flake8 = "^7.1.1"
pylint = "^3.2.6"
lxml-stubs = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
